# asteroids

./: README.md  pyproject.toml  test.py
asteroids/: __main__.py  constants.py  game.py  utils.py
asteroids/entities/: .player.py.swp  __init__.py  asteroid.py  bullet.py  player.py
asteroids/scenes/: .gameover.py.swp  __init__.py  base.py  game.py  gameover.py  mainmenu.py  pause.py
astroids/: game.py
