[tool.poetry]
name = "astroids"
version = "0.1.0"
description = ""
authors = ["Christopher Smith"]

[tool.poetry.dependencies]
python = "^3.6"
pygame = "^2.0.1"
pygame-gui = "^0.5.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
